--- a/ansible/roles/kubeless/templates/trigger-controller.yml.j2
+++ b/ansible/roles/kubeless/templates/trigger-controller.yml.j2
@@ -20,7 +20,7 @@ spec:
         name: kafka-trigger-controller
         env:
         - name: KAFKA_BROKERS
-          value: my-cluster-kafka-bootstrap.kafka:9092
+          value: {{ kafka_cluster_name }}-kafka-bootstrap.{{ kafka_namespace }}:9092
       serviceAccountName: controller-acct
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
