--- a/ansible/roles/services/templates/api-gateway.yml.j2
+++ b/ansible/roles/services/templates/api-gateway.yml.j2
@@ -1,15 +1,15 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: nginx-service
+  name: nginx-service2
   labels:
-    name: nginx-service
+    name: nginx-service2
 spec:
   selector:
     app: nginx
   ports:
     - name: nginx-port
-      port: 80
+      port: 8080
       targetPort: 8080
       protocol: TCP
   type: LoadBalancer
